# authorization-manager

./: Cargo.toml  Dockerfile.dev
migrations/2023-07-19-130034_create_users/: up.sql
src/: app_state.rs  args.rs  env.rs  main.rs  utils.rs
src/modules/: auth.rs  users.rs
src/modules/auth/: controller.rs  service.rs
src/modules/users/: controller.rs  db.rs  model.rs  service.rs  user_jwt.rs
src/utils/: auth_validator.rs  http_authorization_token.rs  jwt.rs  password.rs  req_authorization.rs  response_error.rs  service_error.rs
