[package]
name = "authorization-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
clap = { version = "4.3.15", features = ["derive"] }
diesel = { version = "2.1.0", features = ["postgres"] }
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
argon2 = "0.5.2"
jsonwebtoken = "8.3.0"
actix-web-httpauth = "0.8.1"
futures = "0.3"
